--- a/AzureDevOps/AzureDevOps-Flyway-CICD-Pipeline_Linux.yml
+++ b/AzureDevOps/AzureDevOps-Flyway-CICD-Pipeline_Linux.yml
@@ -17,6 +17,8 @@ trigger: none
 # "FLYWAY_EMAIL" - Email linked to the Redgate account that created the PAT.
 # "FLYWAY_TOKEN" - PAT value (treat like a password; use secure variables or a Library Group).
 # "AGENT_POOL" - The name of the agent pool to be used throughout the pipeline
+# "FLYWAY_AUTH_DISABLED" (Optional) - Create and set to true to skip the auth check stage
+# "FLYWAY_CLI_INSTALL_CHECK"  (Optional) - Default is empty (Or false): Set as 'true' to enable a Flyway CLI validate and Install step
 ### End of Global Stage Variable Group ###
 
 ### Build Stage Variables - Create 'AutoPilotBuild' Variable Group ###
@@ -66,7 +68,7 @@ variables:
   FIRST_UNDO_SCRIPT: "002" # This should match the first undo version in your project
 
   # Optional - For ephemeral agents/runners, it's necessary to validate Flyway is installed on each run. Set the below to true to enable the functionality
-  FLYWAY_CLI_INSTALL_CHECK: "false" # Setting to false will skip the Flyway CLI check step
+  FLYWAY_CLI_INSTALL_CHECK: "$(FLYWAY_CLI_INSTALL_CHECK)" # Setting to false will skip the Flyway CLI check step
   FLYWAY_VERSION: "Latest" # Use 'Latest' or a specific version like '11.0.0'.
   FLYWAY_INSTALL_DIRECTORY: ""  #Path to install Flyway CLI on the agent machine.
 
@@ -112,13 +114,13 @@ stages:
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Flyway Authentication'
-          condition: and(succeeded(), eq(variables['EXECUTE_BUILD'], true))
+          condition: and(succeeded(), eq(variables['EXECUTE_BUILD'], true), ne(variables['FLYWAY_AUTH_DISABLED'], true))
           env:
             FLYWAY_EMAIL: $(FLYWAY_EMAIL)
             FLYWAY_TOKEN: $(FLYWAY_TOKEN)
         # Step 2 - Ensure the Build Database is cleaned of all objects, meaning the build starts from scratch
         - script: |
-            flyway info clean info -environment="$(TARGET_ENVIRONMENT)" -user="$(TARGET_DATABASE_USERNAME)" -password="$(TARGET_DATABASE_PASSWORD)" -configFiles="$(WORKING_DIRECTORY)/flyway.toml" -locations="filesystem:$(WORKING_DIRECTORY)/migrations" $(CUSTOM_PARAMETERS)
+            flyway info clean info -environment="$(TARGET_ENVIRONMENT)" -user="$(TARGET_DATABASE_USERNAME)" -password="$(TARGET_DATABASE_PASSWORD)" -configFiles="$(WORKING_DIRECTORY)/flyway.toml" -locations="filesystem:$(WORKING_DIRECTORY)/migrations" "-environments.$(TARGET_ENVIRONMENT).provisioner=clean" $(CUSTOM_PARAMETERS)
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Clean Build DB'
@@ -210,7 +212,7 @@ stages:
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Flyway Authentication'
-          condition: and(succeeded(), eq(variables['generateReport'], true))
+          condition: and(succeeded(), eq(variables['generateReport'], true), ne(variables['FLYWAY_AUTH_DISABLED'], true))
           env:
             FLYWAY_EMAIL: $(FLYWAY_EMAIL)
             FLYWAY_TOKEN: $(FLYWAY_TOKEN)
@@ -271,7 +273,7 @@ stages:
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Flyway Authentication'
-          condition: succeeded()
+          condition: and(succeeded(), ne(variables['FLYWAY_AUTH_DISABLED'], true))
           env:
             FLYWAY_EMAIL: $(FLYWAY_EMAIL)
             FLYWAY_TOKEN: $(FLYWAY_TOKEN)
@@ -334,7 +336,7 @@ stages:
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Flyway Authentication'
-          condition: and(succeeded(), eq(variables['generateReport'], true))
+          condition: and(succeeded(), eq(variables['generateReport'], true), ne(variables['FLYWAY_AUTH_DISABLED'], true))
           env:
             FLYWAY_EMAIL: $(FLYWAY_EMAIL)
             FLYWAY_TOKEN: $(FLYWAY_TOKEN)
@@ -394,7 +396,7 @@ stages:
           continueOnError: false
           workingDirectory: '$(WORKING_DIRECTORY)'
           displayName: 'Flyway Authentication'
-          condition: succeeded()
+          condition: and(succeeded(), ne(variables['FLYWAY_AUTH_DISABLED'], true))
           env:
             FLYWAY_EMAIL: $(FLYWAY_EMAIL)
             FLYWAY_TOKEN: $(FLYWAY_TOKEN)
