--- a/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
+++ b/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: "self-hosted"
     env:
       DATA_IMAGE_NAME: "Autopilot-Flyway-PostgreSQL"
-      DATA_CONTAINER_NAME: "Autopilot-GitHub-Actions-FastTrack-Build-Validatation_PG-${{ github.run_number }}"
+      DATA_CONTAINER_NAME: "Autopilot-GitHub-Actions-Build-Validate_PG-${{ github.run_number }}"
       PROXY_PORT: "5432"
     steps:
       - name: Checkout Code
@@ -61,7 +61,7 @@ jobs:
 
           if [[ -z "$output" ]]; then
               echo "Image does not exist. Creating image..."
-              rgclone create data-image -f /home/flywayap/rgclone/yaml/AutoPilot_PG-databases-from-script.yaml
+              rgclone create data-image -f /home/flywayap/rgclone/yaml/AutoPilot_MSSQL-databases-from-script.yaml
           else
               echo "Image already exists. Moving on..."
           fi
@@ -108,7 +108,7 @@ jobs:
           echo "Creating Data Container Proxy"
           RUNNER_TRACKING_ID="" && rgclone proxy dc "$DATA_CONTAINER_NAME" -p "$PROXY_PORT" &  # Run the proxy in the background
 
-          echo "RGClone Proxy Enabled"      
+          echo "RGClone Proxy Enabled"   
 
   Validate-Flyway-Pipeline:
     name: Run Flyway Pipeline
@@ -132,3 +132,18 @@ jobs:
             echo "Deleting container for $DATA_CONTAINER_NAME"
             rgclone delete dc -n "$DATA_CONTAINER_NAME"
           fi
+  # This step will check if all jobs have complete and if any fail, the whole workflow will be rerun ONCE. This is required for reasons such as multiple PRs running at the same time.
+  retry-jobs:
+    name: Retry if Any Job Fails
+    runs-on: "self-hosted"
+    needs: [setup-validation-environment, Validate-Flyway-Pipeline, cleanup]
+    if: failure()
+    strategy:
+      fail-fast: false
+      matrix:
+        job: [setup-validation-environment, Validate-Flyway-Pipeline, cleanup]
+    steps:
+      - name: Retry Failed Job
+        run: |
+          echo "Retrying failed job: ${{ matrix.job }}"
+          gh workflow run "${{ matrix.job }}"
