--- a/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
+++ b/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
@@ -8,15 +8,28 @@ on:
       - 'feature/*'  # Triggers on PRs to any feature branch
   #schedule:
     #- cron: "0 3 * * *"  # Runs at 3 AM UTC
+
+ ### Step 1: Define Repository Secrets ###
+ ### Environment Secrets - Create Environment Secrets ###
+ ### Navigate to Settings > Secrets & Variables > Actions
+ # RGCLONE_API_ENDPOINT: Enter the RGClone API Endpoint Address
+ # RGCLONE_ACCESS_TOKEN: Enter the Access Token for connecting to the above endpoint
+ ### Step 2: Define Repository Variables ###
+ ### Environment Secrets - Create Environment Secrets ###
+ ### Navigate to Settings > Secrets & Variables > Actions
+ # RGCLONE_IMAGE_NAME: Enter the name of the RGClone Image to be used
+ # RGCLONE_CONTAINER_NAME: Enter the name of the container to be created
+ # RGCLONE_PROXY_PORT: Enter the local port number to be used by the proxy command
+### End of Environment Variables ###
     
 jobs:
   setup-validation-environment:
     name: Spin Up RGClone Validation Container
     runs-on: "self-hosted"
     env:
-      DATA_IMAGE_NAME: "${{ secrets.RGCLONE_IMAGE_NAME }}"
-      DATA_CONTAINER_NAME: "${{ secrets.RGCLONE_CONTAINER_NAME }}-${{ github.run_number }}"
-      PROXY_PORT: "${{ secrets.RGCLONE_PROXY_PORT }}"
+      DATA_IMAGE_NAME: "${{ vars.RGCLONE_IMAGE_NAME }}"
+      DATA_CONTAINER_NAME: "${{ vars.RGCLONE_CONTAINER_NAME }}-${{ github.run_number }}"
+      PROXY_PORT: "${{ vars.RGCLONE_PROXY_PORT }}"
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -133,17 +146,13 @@ jobs:
             rgclone delete dc -n "$DATA_CONTAINER_NAME"
           fi
   # This step will check if all jobs have complete and if any fail, the whole workflow will be rerun ONCE. This is required for reasons such as multiple PRs running at the same time.
-  retry-jobs:
-    name: Retry if Any Job Fails
+  retry-workflow:
+    name: Retry Entire Workflow If Any Job Fails
     runs-on: "self-hosted"
     needs: [setup-validation-environment, Validate-Flyway-Pipeline, cleanup]
-    if: failure()
-    strategy:
-      fail-fast: false
-      matrix:
-        job: [setup-validation-environment, Validate-Flyway-Pipeline, cleanup]
+    if: failure()  # Triggers only if any previous job failed
     steps:
-      - name: Retry Failed Job
+      - name: Trigger Workflow Again
         run: |
-          echo "Retrying failed job: ${{ matrix.job }}"
-          gh workflow run "${{ matrix.job }}"
+          echo "Retrying workflow due to failure..."
+          gh workflow run "${{ github.workflow }}" -f run_id="${{ github.run_id }}"
