--- a/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
+++ b/.github/workflows/GitHub-Workflow-Validation-Checks_RGCLONE.yml
@@ -166,11 +166,11 @@ jobs:
       - name: Authenticate GitHub CLI
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+        run: echo "${{ secrets.HK_TOKEN }}" | gh auth login --with-token
 
       - name: Trigger Workflow Again
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HK_TOKEN }}
         run: |
           echo "Retrying workflow due to failure..."
           gh workflow run "${{ github.workflow }}" -f run_id="${{ github.run_id }}"
